Prevent main view overflow

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -26,6 +26,7 @@ html
     max-height: 100%
     background: black
     color-scheme: dark
+    overflow-y: hidden
 
 body
     height: 100%
